Suppressing First Run bubble when viewing chrome://welcome-win10

BUG=689888

Review-Url: https://codereview.chromium.org/2684963003
Cr-Commit-Position: refs/heads/master@{#449119}

Former-commit-id: b2541ce363e08db756a8418fee5fb195339b957e